--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -19,8 +19,8 @@
         <td>@Html.DisplayFor(modelItem=>item.StudentName)</td>
         <td>@Html.DisplayFor(modelItem=>item.StudentSurName)</td>
         <td>
-          <a asp-controller="Student"asp-action="Edit" asp-route-id="@item.StudentId" class="btn btn-sm btn-primary">Edit</a>
-          <a href=""class="btn btn-sm btn-danger">Delete</a>
+          <a asp-action="Edit" asp-route-id="@item.StudentId" class="btn btn-sm btn-primary">Edit</a>
+          <a asp-action="Delete" asp-route-id="@item.StudentId"class="btn btn-sm btn-danger">Delete</a>
         </td>
       </tr>
     }
