Course controller and views done.

--- a/Views/Student/Edit.cshtml
+++ b/Views/Student/Edit.cshtml
@@ -1,7 +1,7 @@
 @model Student
-<h2>Add Students</h2>
+<h2>Edit Student Page</h2>
 <br>
-<form asp-controller="Student"asp-action="Edit"method="post">
+<form asp-controller="Course"asp-action="Edit"method="post">
   <input type="hidden" asp-for="StudentId">
   <div class="mb-3">
     <label asp-for="StudentName"class="form-label">Student Name</label>
